Fixed submodules (finally)

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,9 +25,12 @@
 [submodule "bundle/suda.vim"]
 	path = bundle/suda.vim
 	url = https://github.com/lambdalisue/suda.vim.git
-[submodule "bundle/vim-surround"]
-	path = bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
 [submodule "bundle/vim-prettier"]
 	path = bundle/vim-prettier
 	url = https://github.com/prettier/vim-prettier.git
+[submodule "bundle/undotree"]
+	path = bundle/undotree
+	url = https://github.com/mbbill/undotree.git
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
